syntax = "proto3";

package pt.uminho.di.a3m.core.messaging;

// primitive value
message PValue{
  oneof value{
    int32 int_value = 1;
    float float_value = 2;
    double double_value = 3;
    string string_value = 4; // To serialize complex objects, convert them to JSON
    bool bool_value = 5;
    }
}

// primitive map
message PMap {
  map<string, PValue> items = 1;
}

// error payload
message ErrorPayload{
  bytes code = 1;
  string text = 2;
}